--- a/overlay-modal-practice/14c-overlaymodel.html
+++ b/overlay-modal-practice/14c-overlaymodel.html
@@ -8,9 +8,9 @@
     <body>
         <div class="sidebar">sidebar</div>
 
-        <div class="overlay">
-         <div class="modal">
-            <div class="modal-title">Modal Title</div>
+        <div class="overlay2">
+         <div class="modal2">
+            <div class="modal-title2">Modal Title</div>
             <div class="second-line">This is a modal</div>
             <div><button class="close">close</button></div>
          </div>
