--- a/div-practice.html
+++ b/div-practice.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>This is a git tutorial</title>
+        <title>This is version 2 of git tutorial</title>
     </head>
 
     <body>
-        <div style="height: 30px; width: 30px; background-color: lightblue;">Item 1</div>
-        <div style="height: 30px; width: 30px; background-color: lightpink;">Item 2</div>        
+        <div style="height: 100px; width: 100px; background-color: lightblue;">Item 1</div>
+        <div style="height: 100px; width: 100px; background-color: lightpink;">Item 2</div>        
 
     </body>
 </html>
